TEST_PROGRAMS/INVALID/remi_bernard/ends.min
# One too many 'endifs'
if a then
	if b then
	endif
endif
endif

